--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "node-cron": "^3.0.0",
     "pdfkit": "^0.13.0",
     "prisma": "^5.0.0",
-    "puppeteer": "^21.0.0",
+    "puppeteer": "^24.32.1",
     "redis": "^4.6.0",
     "whatsapp-web.js": "^1.23.0",
     "winston": "^3.11.0",
@@ -86,6 +86,8 @@
     "@types/jest": "^29.0.0",
     "@types/luxon": "^3.7.1",
     "@types/node": "^20.0.0",
+    "@types/node-cron": "^3.0.11",
+    "@types/pdfkit": "^0.17.4",
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
     "eslint": "^8.50.0",
