--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@prisma/client": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "jsonwebtoken": "^9.0.3",
     "luxon": "^3.7.2",
     "node-cron": "^3.0.0",
@@ -83,6 +84,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/exceljs": "^0.5.3",
     "@types/jest": "^29.0.0",
     "@types/luxon": "^3.7.1",
     "@types/node": "^20.0.0",
