--- a/package.json
+++ b/package.json
@@ -72,11 +72,13 @@
     "@types/jsonwebtoken": "^9.0.10",
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
+    "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "luxon": "^3.7.2",
     "node-cron": "^3.0.0",
     "pdfkit": "^0.13.0",
     "prisma": "^5.0.0",
+    "prom-client": "^15.1.3",
     "puppeteer": "^24.32.1",
     "redis": "^4.6.0",
     "whatsapp-web.js": "^1.23.0",
@@ -85,6 +87,7 @@
   },
   "devDependencies": {
     "@types/exceljs": "^0.5.3",
+    "@types/express": "^5.0.6",
     "@types/jest": "^29.0.0",
     "@types/luxon": "^3.7.1",
     "@types/node": "^20.0.0",
