--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,27 @@
 {
-    "chat.promptFilesRecommendations": {
-        "speckit.constitution": true,
-        "speckit.specify": true,
-        "speckit.plan": true,
-        "speckit.tasks": true,
-        "speckit.implement": true
+  "cursor.ai.enableCloudAgents": true,
+  "cursor.ai.cloudAgentProvider": "azure",
+  "cursor.mcp.enabled": true,
+  "cursor.mcp.autoStart": true,
+  "cursor.mcp.logLevel": "info",
+  
+  // Azure-specific settings
+  "cursor.azure.enabled": true,
+  "cursor.azure.region": "southeastasia",
+  
+  // MCP Server settings
+  "cursor.mcp.servers": {
+    "azure": {
+      "enabled": true,
+      "autoStart": true
     },
-    "chat.tools.terminal.autoApprove": {
-        ".specify/scripts/bash/": true,
-        ".specify/scripts/powershell/": true
+    "context7": {
+      "enabled": true,
+      "autoStart": true
     }
+  },
+  
+  // TypeScript settings
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
-
