feat: Complete Phase 1 setup for button deprecation feature
- Install fuse.js@^7.0.0 for fuzzy command matching
- Verify zod@^3.22.0 and redis@^4.6.0 dependencies
- Add ENABLE_LEGACY_BUTTONS environment variable to .env.example
- Add complete feature specification and implementation plan
- Mark Phase 1 tasks as complete in tasks.md

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
-# Database Configuration
-DATABASE_URL=postgresql://cashflow_user:cashflow_pass@localhost:5432/cashflow_bot
+# Database
+DATABASE_URL=postgresql://user:password@localhost:5432/dbname
 
-# Redis Configuration
+# Redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_DB=0
 
 # Authentication
-JWT_SECRET=your-secret-key-min-32-chars-change-in-production
+JWT_SECRET=your-secret-key-minimum-32-characters-long
 JWT_EXPIRES_IN=24h
 
-# WhatsApp Configuration
+# WhatsApp
 WHATSAPP_SESSION_PATH=.wwebjs_auth
 WHATSAPP_QR_CODE_TIMEOUT=60000
 
-# Application Configuration
+# Application
 NODE_ENV=development
 PORT=3000
 TZ=Asia/Makassar
@@ -47,16 +47,8 @@ HEALTH_CHECK_PORT=3000
 REPORTS_DIR=./reports
 MAX_PDF_SIZE_MB=16
 
-# Azure Cloud Agent Configuration (for Cursor MCP)
-# Get these values from Azure Portal or using: az account show
-AZURE_SUBSCRIPTION_ID=your-azure-subscription-id
-AZURE_TENANT_ID=your-azure-tenant-id
-AZURE_CLIENT_ID=your-azure-client-id
-AZURE_CLIENT_SECRET=your-azure-client-secret
-
-# Azure Resource Configuration (optional)
-AZURE_RESOURCE_GROUP=finance-bot-rg
-AZURE_REGION=southeastasia
-
-# Context7 MCP Server (optional, for library documentation)
-CONTEXT7_API_KEY=your-context7-api-key
+# Button Deprecation Feature Flag
+# Controls whether legacy button interactions are enabled
+# Default: true (for backward compatibility during transition period)
+# Set to false to disable buttons and enable command-only mode
+ENABLE_LEGACY_BUTTONS=true
