--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "fuse.js": "^7.1.0",
     "jsonwebtoken": "^9.0.3",
     "luxon": "^3.7.2",
     "node-cron": "^3.0.0",
