--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   postgres:
@@ -36,8 +36,8 @@ services:
     image: prom/prometheus:latest
     container_name: cashflow_prometheus
     command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
     ports:
       - "9090:9090"
     volumes:
@@ -69,10 +69,12 @@ services:
       REDIS_URL: redis://redis:6379
       NODE_ENV: production
       TZ: Asia/Makassar
+      LOG_LEVEL: ${LOG_LEVEL:-INFO}
+      WHATSAPP_SESSION_PATH: /app/.wwebjs_auth
     ports:
       - "3000:3000"
     volumes:
-      - ../wwebjs_auth:/app/.wwebjs_auth
+      - whatsapp-session:/app/.wwebjs_auth
       - ../reports:/app/reports
     depends_on:
       postgres:
@@ -80,9 +82,23 @@ services:
       redis:
         condition: service_healthy
     restart: unless-stopped
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "node",
+          "-e",
+          "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})",
+        ]
+      interval: 30s
+      timeout: 10s
+      start_period: 60s
+      retries: 3
 
 volumes:
   postgres_data:
   redis_data:
   prometheus_data:
   grafana_data:
+  whatsapp-session:
+    driver: local
