feat: Complete Phase 1 and Phase 2 implementation
Phase 1: Setup (Docker Infrastructure)
- Updated Dockerfile with UID 1000, GID 1000 (per requirements)
- Updated docker-compose.yml with whatsapp-session named volume
- Added health check configuration for bot service
- Added Docker scripts to package.json (docker:build, docker:up, docker:down)
- Verified .dockerignore exists and is complete

Phase 2: Foundational (Blocking Prerequisites)
- Created Prisma migrations for SystemConfig and MessageTemplate models
- Implemented SystemConfig model (src/models/config.ts) with CRUD operations
- Implemented MessageTemplate model (src/models/template.ts) with CRUD operations
- Enhanced User model with list() and delete() methods with validation
- Enhanced AuditLog model with action types documentation
- Added DEV_PHONE_NUMBER to environment configuration
- Created correlation ID utility (src/lib/correlation.ts) with UUID v4, TTL, and cleanup
- Generated Prisma Client with new models
- Fixed lint-staged config to exclude Prisma files from prettier

All Phase 1 and Phase 2 tasks completed (13/13 tasks)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -76,13 +76,14 @@ COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/prisma ./prisma
 COPY --from=builder /app/package.json ./package.json
 
-# Create directories for WhatsApp session and logs
+# Create directories for WhatsApp session and logs with proper permissions (UID 1000, GID 1000, mode 755)
 RUN mkdir -p .wwebjs_auth logs && \
-    chmod 755 .wwebjs_auth logs
+    chmod 755 .wwebjs_auth logs && \
+    chown -R nodejs:nodejs .wwebjs_auth logs
 
-# Create non-root user for security
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nodejs -u 1001 && \
+# Create non-root user for security (UID 1000, GID 1000 per requirements)
+RUN addgroup -g 1000 -S nodejs && \
+    adduser -S nodejs -u 1000 && \
     chown -R nodejs:nodejs /app
 
 # Switch to non-root user
