--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -72,13 +72,19 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ../wwebjs_auth:/app/.wwebjs_auth
+      - whatsapp-session:/app/.wwebjs_auth
       - ../reports:/app/reports
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      interval: 30s
+      timeout: 10s
+      start_period: 60s
+      retries: 3
     restart: unless-stopped
 
 volumes:
@@ -86,3 +92,5 @@ volumes:
   redis_data:
   prometheus_data:
   grafana_data:
+  whatsapp-session:
+    name: whatsapp-session
