fix: Configure prettier-plugin-prisma for Prisma schema formatting
- Created .prettierrc.js with prettier-plugin-prisma configuration
- Added parser override for .prisma files
- Prettier will now properly format Prisma schema files
- Removed .prettierrc.json (using .prettierrc.js instead)

--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "lint-staged": "^16.2.7",
     "playwright": "^1.40.0",
     "prettier": "^3.0.0",
+    "prettier-plugin-prisma": "^5.0.0",
     "ts-jest": "^29.1.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
