--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@types/node": "^20.0.0",
     "@types/node-cron": "^3.0.11",
     "@types/pdfkit": "^0.17.4",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
     "eslint": "^8.50.0",
@@ -114,6 +115,7 @@
     "playwright": "^1.40.0",
     "prettier": "^3.0.0",
     "prettier-plugin-prisma": "^5.0.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.1.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
