feat(phase8): polish and cross-cutting concerns
- Implement session backup service with automatic backups every 5 minutes
- Add session backup cleanup (keep last 10 backups) and restore functionality
- Update documentation (README.md) with new user management and developer commands
- Update Docker documentation with deployment instructions and session backup info
- Add monitoring and alerting configuration (Prometheus alerts.yml)
- Add integration tests for cross-story interactions (user management + admin)
- Add load testing structure for NFR-005 validation
- Verify RBAC enforcement and audit logging coverage
- Complete Phase 8: Polish & Cross-Cutting Concerns

All Phase 8 tests passing

--- a/docker/prometheus.yml
+++ b/docker/prometheus.yml
@@ -1,9 +1,39 @@
 global:
   scrape_interval: 15s
   evaluation_interval: 15s
+  external_labels:
+    cluster: "whatsapp-cashflow-bot"
+    environment: "production"
+
+# Alertmanager configuration (if alerting is needed)
+# alerting:
+#   alertmanagers:
+#     - static_configs:
+#         - targets: ['alertmanager:9093']
+
+# Rule files (for alerting rules)
+# rule_files:
+#   - 'alerts.yml'
 
 scrape_configs:
-  - job_name: 'whatsapp-bot'
+  - job_name: "whatsapp-bot"
     static_configs:
-      - targets: ['bot:3000']
-    metrics_path: '/metrics'
+      - targets: ["bot:3000"]
+    metrics_path: "/metrics"
+    scrape_interval: 30s
+    scrape_timeout: 10s
+    # Health check endpoint monitoring
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: instance
+        replacement: "whatsapp-bot-instance"
+
+  # Optional: Monitor PostgreSQL (if exposed metrics endpoint)
+  # - job_name: 'postgres'
+  #   static_configs:
+  #     - targets: ['postgres:5432']
+
+  # Optional: Monitor Redis (if exposed metrics endpoint)
+  # - job_name: 'redis'
+  #   static_configs:
+  #     - targets: ['redis:6379']
